# ros_dude

./: CMakeLists.txt  package.xml
dude_control/: CMakeLists.txt  package.xml
dude_control/config/: control.yaml  diagnostics.yaml  dude.yaml  localization.yaml  razor.yaml  teleop.yaml  twist_mux.yaml
dude_control/launch/: control.launch  driver.launch  dude.launch  teleop.launch  temp.launch
dude_control/launch/include/: driver.launch  imu.launch  rgbd.launch
dude_demo/: CMakeLists.txt  package.xml
dude_demo/launch/: wandering.launch  web.launch  web_demo.launch
dude_demo/launch/include/: bringup.launch  web.launch
dude_description/: CMakeLists.txt  package.xml
dude_description/launch/: description.launch  display.launch
dude_description/meshes/body/: base_link.STL  base_link.dae  column_body_Link.STL
dude_description/meshes/motor/: motor_Link.STL
dude_description/meshes/omniwheel/: omniwheel_Link.STL
dude_description/meshes/xtion/: xtion_camera_link.STL
dude_description/urdf/: asus_xtion_pro.urdf.xacro  description.xacro  dude.urdf.xacro  imu.urdf.xacro  omniwheel.urdf.xacro  wheel.urdf.xacro
dude_navigation/: CMakeLists.txt  package.xml
dude_navigation/config/: costmap_common.yaml  planner.yaml
dude_navigation/launch/: amcl.launch  amcl_demo.launch  display.launch  exploration.launch  exploration_demo.launch  gmapping.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
dude_navigation/maps/: OR4.yaml  SPQwoRk.pgm  SPQwoRk.yaml  cafe.pgm  cafe.yaml  home.pgm  home.yaml  lab_sys.pgm  lab_sys.yaml
dude_navigation/rviz/: navigation.rviz
launch/: dude-web.launch  dude.launch
launch/include/: dude_description.launch  rgbd.launch
ros_dude_control/: CMakeLists.txt  package.xml
ros_dude_control/config/: control.yaml  joint_position_control.yaml
ros_dude_control/launch/: driver.launch  dude.launch
ros_dude_control/launch/include/: laserscan.launch
ros_dude_description/: CMakeLists.txt  dude_robot.yaml  package.xml
ros_dude_description/config/: dude.yaml
ros_dude_description/launch/: display.launch  dude_rviz_view_model.launch
ros_dude_description/launch/include/: dude_description.launch
ros_dude_description/meshes/body/: base_link.STL  battery_Link.STL  column_body_Link.STL  electronics_Link.STL  wall_body_Link.STL
ros_dude_description/meshes/omniwheel/: omniwheel_Link.STL  wheel1_omniwheel_Link.STL  wheel3_omniwheel_Link.STL  wheel4_omniwheel_Link.STL  wheel5_omniwheel_Link.STL  wheel6_omniwheel_Link.STL  wheel7_omniwheel_Link.STL  wheel8_omniwheel_Link.STL
ros_dude_description/meshes/wheel/: wheel_link.STL
ros_dude_description/meshes/xtion/: xtion_camera_Link.STL  xtion_sensor_Link.STL  xtion_sensor_link.STL
ros_dude_description/rviz/: model.rviz  urdf.rviz
ros_dude_description/urdf/: asus_xtion_pro.urdf.xacro  description.xacro  dude.urdf.xacro  materials.urdf  motor.urdf.xacro  omniwheel.urdf.xacro  wheel.urdf.xacro
ros_dude_navigation/: CMakeLists.txt  Untitled Document
ros_dude_navigation/config/: control.yaml
ros_dude_navigation/launch/: move_base.launch
rviz/: robot.rviz
urdf/: description.xacro  dude.urdf.xacro  motor.urdf.xacro  passive_sprocket.urdf.xacro  wheel.urdf.xacro
urdf/sensors/: asus_xtion_pro.urdf.xacro
