<?xml version="1.0"?>
<package>
  <name>ros_dude</name>
  <version>0.0.1</version>
  <description>
	This is the configuration package for the robot 4UDE.
  </description>

  
  <maintainer email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</maintainer>
  <maintainer email="mauro.soligo@katodo.com">Mauro Soligo</maintainer>
  <maintainer email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/rbonghi/ros_dude</url>

  <author email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</author>
  <author email="mauro.soligo@katodo.com">Mauro Soligo</author>
  <author email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>serial_bridge</run_depend>

</package>
