<?xml version="1.0"?>
<package>
  <name>ros_dude_description</name>
  <version>0.0.1</version>
  <description>
	This is the configuration package for the robot 4UDE.
  </description>

  
  <maintainer email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/rbonghi/ros_dude</url>

  <author email="raffaello.bonghi@minisumo.net">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

</package>
